--- a/README
+++ b/README
@@ -1,3 +1,21 @@
 = Page Parts
 
-Description goes here
+Content model enhancements to the PagePart model. Allows the
+storage of native DB types (boolean, integer, and datetime) in addition to the
+standard text content. Provides a foundation for creating richer content types
+through PagePart subclasses.
+
+== Usage
+
+Install and run migrations. Now when adding a page part, you will be able to
+specify what type. Content will be stored as a native representation
+(DatetimePagePart in a datetime column, &c.), allowing for advanced operations
+at the DB level. Further subclasses with custom behavior can be added by
+providing your own model and admin partial.
+
+== TODO
+
+ * Front-end rendering
+ * Type-aware Radius tags
+ * Indexes on additional content columns
+ * Calendar picker JS
